# Buergerregister_Light

./: CLI.py  Makefile  README.md  people.json  pyproject.toml
.github/workflows/: ci.yml
docs/: demo_proto.md
docs/demoproto/: demo_add_person.py  demo_e2e_buergerregister.py  demo_find_person.py  demo_list_person.py  demo_validation.py
src/buergerregister/: __init__.py  models.py  register.py  validation.py
tests/: test_person.py  test_register.py  test_validation.py
