[project]
name = "buergerregister"
version = "0.1.0"
description = "Mini-Verwaltungsanwendung zur Bürgerverwaltung"
authors = [{ name = "Vorname Nachname" }]
requires-python = ">=3.10"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--maxfail=1 --disable-warnings -q"

[tool.coverage.run]
branch = true
source = ["src/buergerregister"]

[tool.coverage.report]
show_missing = true
skip_empty = true
